BRT now sends data to HRS